take two on fixing box overflow

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -1,5 +1,15 @@
-.wy-table-responsive table {
+/*.wy-table-responsive table {
     display: block;
     overflow-x: auto;
     white-space: nowrap;
+}*/
+
+
+.wy-table-responsive {
+    overflow-x: auto;
+}
+
+.wy-table-responsive table {
+    width: auto;
+    min-width: 100%;
 }
